Resolves wrapping of voters, fixes #14. Hides closed topics by default, fixes #15. Committer flags are updated on an interval basis.

--- a/_static/css/dote.styl
+++ b/_static/css/dote.styl
@@ -134,6 +134,10 @@ button-hover-color = #86bdf2
 
 #filterPane .dijitTitlePaneContentInner
   padding 5px 0 2px 0
+  > form
+    margin-top -5px
+    margin-bottom -2px
+    line-height 3em
 
 .filterItem
   padding 10px
